packages/frontend/src/components/dataContracts/DataContractTotalCard.scss
@use '../../styles/mixins.scss';
@import '../../styles/variables.scss';

.DataContractTotalCard {
  @include mixins.TotalCard();

  &__Title {
    font-weight: 700;
    font-size: 0.875rem;
    margin-bottom: 0.875rem;
  }

  &__HeaderLines {
    width: 100%;
  }

  &__Identifier, &__Owner {
    .InfoLine__Value {
      width: 100%;
      text-align: right;

      .Identifier {
        justify-content: flex-end;
      }
    }
  }

  &__Owner {
    .ValueCard {
      max-width: max-content;
      margin-left: auto;
    }
  }

  @media screen and (max-width: $breakpoint-md) {
    &__Header {
      .InfoLine {
        flex-wrap: wrap;
        justify-content: flex-start;
        gap: 5px;

        &__Title {
          width: 100%;
        }

        &__Value {
          width: 100%;
          justify-content: flex-start;
          text-align: left;
        }
      }
    }

    &__Identifier {
      .Identifier {
        justify-content: flex-start !important;
      }
    }

    &__Identifier {
      padding-right: 90px;
    }

    &__Owner {
      .ValueCard {
        width: max-content;
        max-width: 100%;
        margin-left: 0;
      }
    }

    &__Avatar {
      position: absolute;
      right: 16px;
      top: 20px;
      margin-right: 0;
    }
  }
}

